manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pipeline
  namespace: pipeline
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: test-pipeline
  template:
    metadata:
      labels:
        app: test-pipeline
    spec:
      containers:
      - image: 627348467762.dkr.ecr.us-east-2.amazonaws.com/angular-app:latest
        name: test-pipeline
        ports:
        - containerPort: 4200
        imagePullPolicy: Always
      imagePullSecrets:
        - name: test-pipeline
