manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-pipeline
  namespace: pipeline
spec:
  ports:
  - port: 4200
    targetPort: 4200
  selector:
    app: test-pipeline
