manifest/ingress.yaml
#Important: The api version depends on the installed kubernetes version
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-pipeline-ingress
  namespace: pipeline
  annotations:
    kubernetes.io/ingress.class: alb
#      kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#     nginx.ingress.kubernetes.io/service-upstream: "true"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.

spec:
  rules:
  - host: test-pipeline.africaprudential.net
    http:
      paths:
      - backend:
          service:
            name: test-pipeline
            port: 
              number: 4200
        path: /
        pathType: ImplementationSpecific  
  tls:
    - hosts:
        - test-pipeline.africaprudential.net
      secretName: pipeline-tls
